"Added script tag for contact.js in index.html"

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-
+    <script src="contact.js"></script>
 
   <footer class="u-clearfix u-footer u-grey-80" id="sec-89c2">
     <div class="u-clearfix u-sheet u-sheet-1">
