--- a/index.html
+++ b/index.html
@@ -14,6 +14,31 @@
   <meta name="referrer" content="origin">
   <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
   <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,200,300,400,500,600,700,800,900|Ubuntu:300,300i,400,400i,500,500i,700,700i">
+  <link rel="shortcut icon" href="images/malek.png" type="image/x-icon">
+  <!-- Primary Meta Tags -->
+  <title>Malek Cheikh | Portfolio</title>
+  <meta name="title" content="Malek Cheikh | Portfolio" />
+  <meta name="description" content="Industrial Engineer,
+  Innovator | Problem Solver - Proficient in navigating the complexities of the industry
+  " />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://metatags.io/" />
+  <meta property="og:title" content="Malek Cheikh | Portfolio" />
+  <meta property="og:description" content="Industrial Engineer,
+  Innovator | Problem Solver - Proficient in navigating the complexities of the industry
+  " />
+  <meta property="og:image" content="images/malek.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://metatags.io/" />
+  <meta property="twitter:title" content="Malek Cheikh | Portfolio" />
+  <meta property="twitter:description" content="Industrial Engineer,
+  Innovator | Problem Solver - Proficient in navigating the complexities of the industry
+  " />
+  <meta property="twitter:image" content="images/malek.png" />
 
 
 </head>
@@ -47,7 +72,7 @@
                   <br>Seeking to leverage comprehensive industry knowledge and problemsolving prowess to drive
                   innovation and contribute to the success of an oil and gas company.
                 </p>
-                <a href="#" class="u-border-none u-btn u-button-style u-palette-3-base u-btn-1"
+                <a href="Malek CHEIKH Resume.pdf" class="u-border-none u-btn u-button-style u-palette-3-base u-btn-1"
                   data-animation-name="customAnimationIn" data-animation-duration="2000">Download CV </a>
               </div>
             </div>
@@ -121,7 +146,7 @@
                   src="https://assets.nicepagecdn.com/a879e958/6329008/images/4257459-1ba70157.png" alt=""></span>
               <h3 class="u-align-center u-text u-text-5" data-animation-name="counter" data-animation-event="scroll"
                 data-animation-duration="3000">5 </h3>
-              <h5 class="u-align-center u-text u-text-6">Softwares Mustered</h5>
+              <h5 class="u-align-center u-text u-text-6">Softwares Mastered</h5>
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
