"Updated meta tags for Open Graph and Twitter with new URL and image"

--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://metatags.io/" />
+  <meta property="og:url" content="https://malek.alicheikh.tn/" />
   <meta property="og:title" content="Malek Cheikh | Portfolio" />
   <meta property="og:description" content="Industrial Engineer,
   Innovator | Problem Solver - Proficient in navigating the complexities of the industry
   " />
-  <meta property="og:image" content="images/malek.png" />
+  <meta property="og:image" content="https://media.licdn.com/dms/image/v2/D4D03AQHZVDrkb-wNAA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1691627218128?e=2147483647&v=beta&t=TJ-1MsgnKee1dnrIHSAmt0JEQrFIC2ALeyuo-csyC_c" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://metatags.io/" />
+  <meta property="twitter:url" content="https://malek.alicheikh.tn/" />
   <meta property="twitter:title" content="Malek Cheikh | Portfolio" />
   <meta property="twitter:description" content="Industrial Engineer,
   Innovator | Problem Solver - Proficient in navigating the complexities of the industry
   " />
-  <meta property="twitter:image" content="images/malek.png" />
+  <meta property="twitter:image" content="https://media.licdn.com/dms/image/v2/D4D03AQHZVDrkb-wNAA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1691627218128?e=2147483647&v=beta&t=TJ-1MsgnKee1dnrIHSAmt0JEQrFIC2ALeyuo-csyC_c" />
 
 
 </head>
