"Updated text in index.html: reformatted paragraph and removed one line break"

--- a/index.html
+++ b/index.html
@@ -354,8 +354,7 @@
                 </div>
                 <h5 class="u-text u-text-default u-text-3">Reach out to me via this form</h5>
                 <p class="u-text u-text-4"> have a unique perspective that you can leverage.<br>
-                  <br> “Let’s Create Efficiency – Say Hello!”: Efficiency is at the heart of industrial engineering.
-                  Invite visitors to connect and explore efficient solutions.
+                  <br> “Let’s Create Efficiency – Say Hello!”: <br>Efficiency is the heart of industrial engineering. Let's connect and explore efficient solutions.
                 </p>
                 <div
                   class="custom-expanded u-border-20 u-border-no-bottom u-border-no-right u-border-no-top u-border-palette-3-base u-container-style u-grey-5 u-group u-group-1">
