Refactored HTML structure: removed unnecessary line breaks and updated experience counts

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
           </div>
         </div>
       </div>
-      <h2 class="u-align-center u-text u-text-3" data-animation-name="customAnimationIn" data-animation-duration="2000">
-        Some Status</h2>
+      <h2 class="u-align-center u-text u-text-3" data-animation-name="customAnimationIn" data-animation-duration="2000">Some Status</h2>
     </div>
   </section>
   <section class="skrollable u-clearfix u-container-align-center u-image u-parallax u-shading u-section-3" id="sec-4011"
@@ -125,7 +124,7 @@
                   </g>
                 </svg></span>
               <h3 class="u-align-center u-text u-text-1" data-animation-name="counter" data-animation-event="scroll"
-                data-animation-duration="3000">7 </h3>
+                data-animation-duration="3000">5 </h3>
               <h5 class="u-align-center u-text u-text-2">Years of experience</h5>
             </div>
           </div>
@@ -135,7 +134,7 @@
                 data-animation-name="customAnimationIn" data-animation-duration="1000"><img
                   src="https://assets.nicepagecdn.com/a879e958/6329008/images/3126649-6b6d360e.png" alt=""></span>
               <h3 class="u-align-center u-text u-text-3" data-animation-name="counter" data-animation-event="scroll"
-                data-animation-duration="3000">6</h3>
+                data-animation-duration="3000">7</h3>
               <h5 class="u-align-center u-text u-text-4">Previous Workplaces </h5>
             </div>
           </div>
@@ -155,7 +154,7 @@
                 data-animation-name="customAnimationIn" data-animation-duration="1000"><img
                   src="https://assets.nicepagecdn.com/a879e958/6329008/images/3395949-bcb40dc9.png" alt=""></span>
               <h3 class="u-align-center u-text u-text-7" data-animation-name="counter" data-animation-event="scroll"
-                data-animation-duration="3000">3</h3>
+                data-animation-duration="3000">4</h3>
               <h5 class="u-align-center u-text u-text-8">Acquired Certificates </h5>
             </div>
           </div>
@@ -353,14 +352,10 @@
                 <div class="u-image u-image-circle u-image-1" alt="" data-image-width="2000" data-image-height="1333">
                 </div>
                 <h5 class="u-text u-text-default u-text-3">Reach out to me via this form</h5>
-                <p class="u-text u-text-4"> have a unique perspective that you can leverage.<br>
-                  <br> “Let’s Create Efficiency – Say Hello!”: <br>Efficiency is the heart of industrial engineering. Let's connect and explore efficient solutions.
-                </p>
                 <div
                   class="custom-expanded u-border-20 u-border-no-bottom u-border-no-right u-border-no-top u-border-palette-3-base u-container-style u-grey-5 u-group u-group-1">
                   <div class="u-container-layout u-valign-middle u-container-layout-3">
-                    <p class="u-text u-text-default u-text-5"> “Turning Ideas into Reality – Contact Me!”: Highlight
-                      your ability to transform concepts into practical outcomes. It’s both motivational and
+                    <p class="u-text u-text-default u-text-5"> “Turning Ideas into Reality – Contact Me!”
                       action-oriented.</p>
                   </div>
                 </div>
@@ -374,48 +369,27 @@
 
 
     <script src="contact.js"></script>
-
-  <footer class="u-clearfix u-footer u-grey-80" id="sec-89c2">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <div class="u-align-left u-hover-feature u-social-icons u-spacing-20 u-social-icons-1">
-        <a class="u-social-url" title="Email" target="_blank"
-          href="mailto:Cheikhmalek1@gmail.com?subject=whoop%20you%20got%20here%20from%20my%20website%20stand%20your%20business%20"><span
-            class="u-file-icon u-icon u-social-facebook u-social-icon u-icon-1"><img
-              src="https://assets.nicepagecdn.com/a879e958/6329008/images/2991144.png" alt=""></span>
-        </a>
-        <a class="u-social-url" title="instagram" target="_blank"
-          href="https://www.instagram.com/melekcheikh?utm_source=ig_web_button_share_sheet&amp;igsh=ZDNlZDc0MzIxNw=="><span
-            class="u-icon u-social-icon u-social-instagram u-icon-2"><svg class="u-svg-link"
-              preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112">
-              <use xlink:href="#svg-7475"></use>
-            </svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-7475">
-              <circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle>
-              <path fill="#FFFFFF"
-                d="M55.9,38.2c-9.9,0-17.9,8-17.9,17.9C38,66,46,74,55.9,74c9.9,0,17.9-8,17.9-17.9C73.8,46.2,65.8,38.2,55.9,38.2
-      z M55.9,66.4c-5.7,0-10.3-4.6-10.3-10.3c-0.1-5.7,4.6-10.3,10.3-10.3c5.7,0,10.3,4.6,10.3,10.3C66.2,61.8,61.6,66.4,55.9,66.4z"></path>
-              <path fill="#FFFFFF"
-                d="M74.3,33.5c-2.3,0-4.2,1.9-4.2,4.2s1.9,4.2,4.2,4.2s4.2-1.9,4.2-4.2S76.6,33.5,74.3,33.5z"></path>
-              <path fill="#FFFFFF" d="M73.1,21.3H38.6c-9.7,0-17.5,7.9-17.5,17.5v34.5c0,9.7,7.9,17.6,17.5,17.6h34.5c9.7,0,17.5-7.9,17.5-17.5V38.8
-      C90.6,29.1,82.7,21.3,73.1,21.3z M83,73.3c0,5.5-4.5,9.9-9.9,9.9H38.6c-5.5,0-9.9-4.5-9.9-9.9V38.8c0-5.5,4.5-9.9,9.9-9.9h34.5
-      c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path>
-            </svg></span>
-        </a>
-        <a class="u-social-url" title="linkedin" target="_blank"
-          href="https://www.linkedin.com/in/malek-cheikh-a6599a138?utm_source=share&amp;utm_campaign=share_via&amp;utm_content=profile&amp;utm_medium=android_app"><span
-            class="u-icon u-social-icon u-social-linkedin u-icon-3"><svg class="u-svg-link"
-              preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112">
-              <use xlink:href="#svg-4454"></use>
-            </svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-4454">
-              <circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle>
-              <path fill="#FFFFFF" d="M41.3,83.7H27.9V43.4h13.4V83.7z M34.6,37.9L34.6,37.9c-4.6,0-7.5-3.1-7.5-7c0-4,3-7,7.6-7s7.4,3,7.5,7
-      C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5
-      H48.7c0,0,0.2-36.5,0-40.3h13.4v5.7c1.8-2.7,5-6.7,12.1-6.7c8.8,0,15.4,5.8,15.4,18.1V83.7z"></path>
-            </svg></span>
-        </a>
-      </div>
+<footer style="background-color: #1a1a1a; color: #fff; padding: 2rem 1rem;">
+  <div style="max-width: 1200px; margin: 0 auto; display: flex; flex-wrap: wrap; justify-content: space-between; align-items: center;">
+    
+    <div style="font-size: 1rem; margin-bottom: 1rem;">
+      © 2025 Malek Cheikh — All rights reserved
     </div>
-  </footer>
-
+    <center>
+    <div style="display: flex; gap: 1rem;">
+      <a href="mailto:Cheikhmalek1@gmail.com?subject=whoop%20you%20got%20here%20from%20my%20website%20stand%20your%20business%20" target="_blank" title="Email" style="color: #fff; text-decoration: none;">
+        <img src="https://img.icons8.com/ios-filled/24/ffffff/email.png" alt="Email" />
+      </a>
+      <a href="https://www.instagram.com/melekcheikh" target="_blank" title="Instagram" style="color: #fff; text-decoration: none;">
+        <img src="https://img.icons8.com/ios-filled/24/ffffff/instagram-new.png" alt="Instagram" />
+      </a>
+      <a href="https://www.linkedin.com/in/malek-cheikh-a6599a138" target="_blank" title="LinkedIn" style="color: #fff; text-decoration: none;">
+        <img src="https://img.icons8.com/ios-filled/24/ffffff/linkedin.png" alt="LinkedIn" />
+      </a>
+    </div>
+    </center>
+  </div>
+</footer>
 </body>
 
 </html>
